[IMP] documents: fix and improve kanban/inspector on mobile
Move chatter at the bottom of the inspector to match the other apps.

Open Action dropdown items in fullscreen because more mobile-friendly.

Zoom out pdf preview in "Split" Action, otherwise pdf unreadable.

Add some cosmetic changes

X-original-commit: 3ccdba35bb3b9ba94184f70fa294d8f87f0aadb1

--- a/documents/static/src/owl/components/pdf_manager/pdf_manager.scss
+++ b/documents/static/src/owl/components/pdf_manager/pdf_manager.scss
@@ -149,4 +149,9 @@ $o-pdf-manager-border-color: #b7b7b7;
             transform: none;
         }
     }
+
+    .o_documents_pdf_canvas {
+        width: 100%;
+        height: auto;
+    }
 }
